# morphis

./: .gitignore  LICENSE  README.md  bun.lockb  index.html  morphis.key.pub  package-lock.json  package.json  tsconfig.json  vite.config.ts
interface/: App.tsx  index.tsx
interface/components/: CommandPalette.tsx  ContactSidebar.tsx  HeaderBar.tsx  LabelPicker.tsx  SearchPalette.tsx  Sidebar.tsx
interface/pages/: CalendarTimeline.tsx  Compose.tsx  Inbox.tsx  Mailbox.tsx  MenubarCalendar.tsx  Onboarding.tsx  Settings.tsx  SplitSetup.tsx  Thread.tsx
interface/styles/: global.css
landing/: bun.lockb  index.html  package-lock.json  package.json
landing/public/: index.html
landing/src/: main.ts  style.css
landing/src/app/: layout.tsx  page.tsx
landing/src/components/: LanguageContext.tsx  (+7 more)
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_thread_cache.sql  003_sender_emails.sql  004_calendar_flag.sql  005_calendar_events.sql  005_email_tracking.sql
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: auth.rs  compose.rs  inbox.rs  labels.rs  mod.rs  settings.rs  sync.rs  unsplash.rs
src-tauri/src/db/: calendar_events.rs  migrations.rs  mod.rs  threads.rs  tracking.rs
src-tauri/src/integrations/: mod.rs  tracking.rs
src-tauri/src/integrations/calendar/: client.rs
src-tauri/src/integrations/gmail/: client.rs  mapper.rs  oauth.rs  sync.rs
src-tauri/src/sync/: engine.rs
src/components/: CommandBar.tsx
src/pages/: Inbox.tsx  Settings.tsx
src/styles/: global.css
tracking-worker/: package.json  schema.sql  wrangler.toml
tracking-worker/src/: index.ts
