[package]
name = "memphis"
version = "0.1.0"
description = "A lightweight email client"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "memphis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
dotenvy = "0.15"

[dependencies]
# Tauri core + plugins
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["macros", "sync", "time"] }

# HTTP client for Gmail API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
tantivy = "0.22"

# Email parsing
mail-parser = "0.9"

# HTML sanitization
ammonia = "4"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# OAuth callback server
tiny_http = "0.12"

# URL handling
url = "2"

# Base64 for email encoding
base64 = "0.22"

# Async trait support
async-trait = "0.1"

# Random for PKCE
rand = "0.8"

# SHA256 for PKCE
sha2 = "0.10"

# Open URLs in default browser
open = "5"

# URL encoding
urlencoding = "2"

# .env file loading
dotenvy = "0.15"

# Async stream utilities (bounded concurrent fetching)
futures = "0.3"
